--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,18 @@
   text-align: center;
 }
 
+.answers {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 10px;
+}
+
+.question p{
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
