--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -92,4 +92,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
